fix: text-container spacing

--- a/style.css
+++ b/style.css
@@ -102,7 +102,6 @@ nav> ul > li > a {
     height: auto;
     position: relative;
     top: -2rem;
-    margin-bottom: 2rem;
 }
 .text-container a {
     display: flex;
@@ -364,6 +363,7 @@ nav > ul {
     margin-bottom: 2rem;
 }
 .projects-grid h2 {
+    margin-top: 3rem;
     margin-bottom: 3rem;
 }
 
